# easy_arcade

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  app_config.cpp  app_config.h  board.h  debug.h  font.cpp  font.h  hid_app.cpp  hid_info.cpp  hid_info.h  i2c_manager.cpp  i2c_manager.h  lcd.cpp  lcd.h  led.h  main.cpp  menu.cpp  menu.h  pad_manager.cpp  pad_manager.h  pad_state.cpp  pad_state.h  pad_translator.cpp  pad_translator.h  pca9555.cpp  pca9555.h  rot_encoder.cpp  rot_encoder.h  serializer.cpp  serializer.h  text_screen.cpp  text_screen.h  tusb_config.h  usb_app_driver.cpp  usb_midi.cpp  util.h
doc/: easy_arcade.md  index.md
docs/: README.md  _config.yml  ea2_analog_adapter.md  ea2_case.md  ea2_multiplayer_adapter.md  ea2_stereo_injection.md  easy_arcade.md
